<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/peso_em_kg"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/altura_em_m"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@+id/etPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAltura" />

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAltura" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeros"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@id/etAltura"
        app:layout_constraintTop_toBottomOf="@id/etAltura" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvResultado">
        <Button
            android:id="@+id/btCalcular"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

        <Space
            android:id="@+id/space"
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btLimpar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/limpar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>